Development Portal (2015-07-24 shi)
==============================
Reorganised Search queries layout
Added translations for Search
Fixed layout for main and minimised versions
Added CSS for Print-Friendly version
Added icons for Print-Friendly version
Fixed background image for Search
Fixed Search and Settings css for rgba styles


Development Portal (2015-07-23 shi)
==============================
Added translations for Search
Added Search headers for main pages
Added classes to Search columns
Optimised Search layout
Added buttons and new info text for Search


Development Portal (2015-06-24 shi)
==============================
Temporary fix mobile view
Added icons to Search dropdown
Added footnote to SAVi for published currencies
Added translations for footnotes in SAVi
Added IATI year to piecharts


Development Portal (2015-06-23 shi)
==============================
Added initial page layout for Search
Added labels to search
Clean up CSS for Search
Added icons for Search and labels
Added translation for Change Settings text


Development Portal (2015-06-18 shi)
==============================
Added settings dropdown buttons and link
Added translations for settings text
Fixed about page options
Added settings icon for themes
Hide breadcrumbs on country / publisher landing 
Added hover state to settings link


Development Portal (2015-06-15 shi)
==============================
Removed year for donor activities and sector views
Fixed cursor hover state for title tables


Development Portal (2015-06-06 shi)
==============================
Fixed colour of other RGBA themes for SAVi
Icons now match themes


Development Portal (2015-06-05 shi)
==============================
Fixed colour of other RGBA themes for <result>
Graphs now math themes


Development Portal (2015-06-04 shi)
==============================
Changed email to support@iatistandard.org
Generator, SAVi, blogposts, translations email change


Development Portal (2015-05-22 shi)
==============================