@@ -842,7 +842,7 @@ Sector Category
 Publisher
 
 #search_year_txt
-Year
+Year Range
 
 #search_view_txt
 You searched:
