@@ -21,7 +21,7 @@
 		<div class="search_label">
 			<img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}
 		</div>
-		<select id="view_search_select_country" class="chosen2">
+		<select id="view_search_select_country" class="chosen">
 			<option value></option>
 			{search_options_country}
 		</select>
@@ -29,7 +29,7 @@
 		<div class="search_label">
 			<img src="{flava}search_funder.png" alt="Funder icon" width="13" height="13"/>{search_donor_txt}
 		</div>
-		<select id="view_search_select_funder" class="chosen2">
+		<select id="view_search_select_funder" class="chosen">
 			<option value></option>
 			{search_options_funder}
 		</select>
@@ -37,7 +37,7 @@
 		<div class="search_label">
 			<img src="{flava}search_sector.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}
 		</div>
-		<select id="view_search_select_sector" class="chosen2">
+		<select id="view_search_select_sector" class="chosen">
 			<option value></option>
 			{search_options_sector}
 		</select>
@@ -45,7 +45,7 @@
 		<div class="search_label">
 			<img src="{flava}search_category.png" alt="Sector Category icon" width="13" height="13"/>{search_sectorcategory_txt}
 		</div>
-		<select id="view_search_select_category" class="chosen2">
+		<select id="view_search_select_category" class="chosen">
 			<option value></option>
 			{search_options_category}
 		</select>
@@ -53,15 +53,18 @@
 		<div class="search_label">
 			<img src="{flava}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}
 		</div>
-		<select id="view_search_select_publisher" class="chosen2">
+		<select id="view_search_select_publisher" class="chosen">
 			<option value></option>
 			{search_options_publisher}
 		</select>
-	</div><div class="search_wrap">
+	</div><div class="search_wrap mini">
 		<div class="search_label">
 			<img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt}
 		</div>
-		<select id="view_search_select_year" class="chosen2">
+		<select id="view_search_select_year" class="chosen">
+			<option value></option>
+			{search_options_year}
+		</select><select id="view_search_select_year" class="chosen">
 			<option value></option>
 			{search_options_year}
 		</select>
