@@ -7,6 +7,7 @@ Added CSS for Print-Friendly version
 Added icons for Print-Friendly version
 Fixed background image for Search
 Fixed Search and Settings css for rgba styles
+Added Year range selectors
 
 
 Development Portal (2015-07-23 shi)
